# telegram-lumberjack-automation

./: .gitignore  LICENSE  README.md
v1/: main.py  requirements.txt
v1/lumberjack/: grabscreen.py  loadgame.py
v2/lumberjack/: .gitignore  Cargo.toml
v2/lumberjack/src/: main.rs
v3/: local_inference.py  screenshot.py
